examples/test/testpolicy18166.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18166
  namespace: namespace223
spec:
  podSelector:
    matchLabels:
      key19: value47
      key5: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value1
      podSelector:
        matchLabels:
          key36: value41
          key20: value7
          key48: value26
